# api_service

./: .test.env  Makefile  README.md  env_example  pyproject.toml  pytest.ini
alembic/: README  env.py
sql_gun/: add_data_into_db.py
sql_gun/pg/: insert_actors.sql  insert_directors.sql  insert_movie.sql  relation_actor.sql  relation_director.sql
src/: main.py
src/app/: __init__.py
src/app/api/movie/: router.py
src/app/api/v1/: router.py  schemas.py
src/auth/: auth.py  manager.py  router.py  schemas.py
src/core/: base.py  config.py  db.py  enums.py
src/models/: __init__.py  actor.py  director.py  entity_movie.py  many_to_many_table.py  movie.py  user.py
tests/: test_movie.py
