[tool.poetry]
name = "api-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
sqlalchemy = "^2.0.26"
python-dotenv = "^1.0.1"
redis = "^5.0.1"
fastapi-users = "^12.1.3"
fastapi-users-db-sqlalchemy = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
