[tool.poetry]
name = "api-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest-asyncio = "^0.23.5"
fastapi-users-db-sqlalchemy = "^6.0.1"
pytest = "^8.0.2"
redis = "^5.0.2"
uvicorn = "^0.27.1"
pydantic-settings = "^2.2.1"
asyncpg = "^0.29.0"
testcontainers = "^3.7.1"
pytest-dotenv = "^0.5.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
